2008-07-14  Adrian Chadd <adrian@creative.net.au>

	* Assorted .c and .h files:  Use libevent for the communications backend

2008-04-11  Ted Bullock <tbullock@canada.com>

	* configure.ac, src/Makefile.am: Make automake compilation optional,
	use --enable-idleconn. This will require libevent.

2008-01-31  Ted Bullock <tbullock@canada.com>

	* src/idleconn.c: Complete rewrite to use libevent backend; slight
	performance improvement thanks to use of libevent notification system

2007-11-16  Ted Bullock <tbullock@canada.com>

	* configure.ac: Enable libevent dependancy
	* src/httperf.c: Print libevent version event notification mechanism

2007-11-15  Ted Bullock <tbullock@canada.com>

	* autogen.sh: Remove in lieu of autoreconf -i

2007-09-23  Ted Bullock <tbullock@canada.com>

	* httperf.c: Add a check to return value of timer_schedule
	* timer.c: Fix a crash associated with rescheduling a timer
	* lib/list.c: NEW Generic linked list data structure implementation
	* lib/list.h: NEW Generic linked list data structure API

2007-09-18  Ted Bullock <tbullock@canada.com>

	* timer.c: Remove the last of the old timer logic code and replace it
	with simpler functionality

2007-09-11  Ted Bullock <tbullock@canada.com>

	* timer.c and timer.h: Use new heap and queue data 
	structures to re-implement timers to use memory caching and 
	try to fix memory leak associated with timers not being freed

2007-09-11  Ted Bullock <tbullock@canada.com>

	* lib/heap.c, lib/heap.h: New generic priority queue data structure

2007-07-15  Ted Bullock <tbullock@canada.com>

	* lib/queue.c, lib/queue.h: New generic queue data structure

2007-07-15  Ted Bullock <tbullock@canada.com>

	* lib/generic_types.h: New File - Migrate various generic types
	out of httperf.h in preparation for a generic queue data structure
	* httperf.h: Removed unneccessary #include commands to minimize
	header inclusion blocks and duplicates
	* *.c: Added #include statements to use new generic_types.h
